--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,4 @@
 {
   "main_pushed_button": "You have pushed the button this many times:",
-  "home_page": "Flutter Demo Home Page"
+  "home_page": "Home"
 }
